' Copyright (C) 2025 - present Gruppe 3, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Probleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Cafe" {
  * id: integer <<generated>>
  --
  * version: integer
  * name: text
  * email: text <<unique>>
  * kategorie: integer
  * gruendungsdatum: date
    kaffeeart: text
  * bewertung: decimal
  * geoeffnet: boolean
    letzte_renovierung: date
    kaffeesorten: json
    username: text
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "CafeManager" {
  * id: integer <<generated>>
  --
  * vorname: text
  * nachname: text
  * **cafe_id**: integer <<FK>>
}

entity "Produkt" {
  * id: integer <<generated>>
  --
  * name: text
  * preis: decimal
  * waehrung: text
  * **cafe_id**: integer <<FK>>
}

Cafe ||..|| CafeManager
Cafe ||..o{ Produkt

footer (c) Gruppe 3 – Hochschule Karlsruhe

@enduml
